// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`facebookAds reducer should add loading ad 1`] = `
Immutable.Map {
  "loading": true,
  "internals": Immutable.Map {},
  "loadingAds": Immutable.List [
    "postid1",
  ],
}
`;

exports[`facebookAds reducer should remove loading ad 1`] = `
Immutable.Map {
  "loading": true,
  "internals": Immutable.Map {},
  "loadingAds": Immutable.List [],
}
`;

exports[`facebookAds reducer should set internals 1`] = `
Immutable.Map {
  "loading": true,
  "internals": Immutable.Map {
    "1": Immutable.Map {
      "ads": Immutable.Map {
        "postid1": Immutable.Map {
          "comments_fetched_at": "2019-01-01 10:30:00",
          "name": "ad 1",
          "is_active": true,
        },
      },
    },
  },
  "loadingAds": Immutable.List [],
}
`;

exports[`facebookAds reducer should set loading state 1`] = `
Immutable.Map {
  "loading": false,
  "internals": Immutable.Map {},
  "loadingAds": Immutable.List [],
}
`;

exports[`facebookAds reducer should update active ad 1`] = `
Immutable.Map {
  "loading": true,
  "internals": Immutable.Map {
    "1": Immutable.Map {
      "ads": Immutable.Map {
        "postid1": Immutable.Map {
          "comments_fetched_at": "2019-01-01 10:30:00",
          "name": "ad 1",
          "is_active": true,
        },
      },
    },
  },
  "loadingAds": Immutable.List [],
}
`;
